SF Primes/src/objects/Laser_Install__c.object
<CustomObject>
    <description>Installed Laser Information</description>
    <fields>
        <fullName>ACT_Create_Date__c</fullName>
        <label>ACT Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Modified_Date__c</fullName>
        <label>ACT Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Vision_Case_Link__c</fullName>
        <formula>IF (NOT ( ISBLANK( Artwork_Vision_Case__c )), hyperlink(&quot;http://dstdevwebint1he.ds.ad.adp.com/AutoToolsX/Vision/VisionPrintPage.aspx?IdNumber=&quot; &amp; Artwork_Vision_Case__c &amp; &quot;&amp;PrintActivityLogFlag=false&amp;OutputType=html&amp;LoginName=&quot; &amp; IF(ISBLANK($User.FirstName), $User.LastName, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName ), &quot;Open Vision Case&quot;), &quot; &quot;)</formula>
        <label>Artwork Vision Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_Vision_Case__c</fullName>
        <formula>Laser_Artwork_Order__r.Artwork_Vision_Case__c</formula>
        <label>Artwork Vision Case #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>Laser Installs</relationshipLabel>
        <relationshipName>R00N40000001m7zbEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <formula>CMF_Info__r.Ship_CMF__c</formula>
        <label>CMF #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Laser Installs</relationshipLabel>
        <relationshipName>R00N40000001lfjOEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFD_Lasers__c</fullName>
        <label># EFD Lasers</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFD_Last_Downloaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LIS users only</description>
        <inlineHelpText>You can only search for LIS users.</inlineHelpText>
        <label>EFD Last Downloaded By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>You can only search for LIS users.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ADPDS - Laser - LIS</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser - RRP</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Installs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFD_Last_Downloaded__c</fullName>
        <label>EFD Last Downloaded</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFD_Revision__c</fullName>
        <label>EFD Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFD_Site_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LIS users only</description>
        <inlineHelpText>You can only search for LIS users.</inlineHelpText>
        <label>EFD Site Created By</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only search for LIS users.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ADPDS - Laser - LIS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Installs_LIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFD_Site_Created__c</fullName>
        <label>EFD Site Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELF_Install_Date__c</fullName>
        <label>ELF Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELF_Site_Created__c</fullName>
        <label>ELF Site Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <label>Install Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Vision_Case_Free_Type__c</fullName>
        <label>Install Vision Case Free Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Vision_Case__c</fullName>
        <formula>IF (NOT ( ISBLANK( Install_Vision_Case_Free_Type__c )), hyperlink(&quot;http://dstdevwebint1he.ds.ad.adp.com/AutoToolsX/Vision/VisionPrintPage.aspx?IdNumber=&quot; &amp; Install_Vision_Case_Free_Type__c &amp; &quot;&amp;PrintActivityLogFlag=false&amp;OutputType=html&amp;LoginName=&quot; &amp; IF(ISBLANK($User.FirstName), $User.LastName, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName ), &quot;Open Vision Case&quot;), &quot; &quot;)</formula>
        <label>Install Vision Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIN_Status__c</fullName>
        <label>LIN Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laser_Artwork_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Laser Artwork Order</label>
        <referenceTo>Laser_Artwork_Order__c</referenceTo>
        <relationshipLabel>Laser Installs</relationshipLabel>
        <relationshipName>Laser_Installs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Lasers__c</fullName>
        <formula>EFD_Lasers__c  +  non_EFD_Lasers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Total Lasers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>non_EFD_Lasers__c</fullName>
        <label># Non-EFD Lasers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Laser Install</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMF__c</columns>
        <columns>CMF_Info__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LIN - {00000}</displayFormat>
        <label>Laser Install</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laser Installs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>